<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    tools:context=".HangmanPlay">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.964">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonA"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/a_Button" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/b_Button" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/c_Button" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/d_Button" />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/e_Button" />

            <Button
                android:id="@+id/buttonF"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/f_Button" />

            <Button
                android:id="@+id/buttonG"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/g_Button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonH"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/h_Button" />

            <Button
                android:id="@+id/buttonI"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/i_Button" />

            <Button
                android:id="@+id/buttonJ"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/j_Button" />

            <Button
                android:id="@+id/buttonK"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/k_Button" />

            <Button
                android:id="@+id/buttonL"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/l_Button" />

            <Button
                android:id="@+id/buttonM"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/m_Button" />

            <Button
                android:id="@+id/buttonN"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/n_Button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonO"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/o_Button" />

            <Button
                android:id="@+id/buttonP"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/p_Button"/>

            <Button
                android:id="@+id/buttonQ"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/q_Button"/>

            <Button
                android:id="@+id/buttonR"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/r_Button"/>

            <Button
                android:id="@+id/buttonS"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/s_Button"/>

            <Button
                android:id="@+id/buttonT"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/t_Button"/>

            <Button
                android:id="@+id/buttonU"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/u_Button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonV"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:text="@string/v_Button"/>

            <Button
                android:id="@+id/buttonW"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:text="@string/w_Button"/>

            <Button
                android:id="@+id/buttonX"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:text="@string/x_Button"/>

            <Button
                android:id="@+id/buttonY"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:text="@string/y_Button"/>

            <Button
                android:id="@+id/buttonZ"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:text="@string/z_Button" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>